<resources>
    <string name="app_name">investo</string>
    <string name="title_activity_login">Login</string>
    <string name="loading">Carregando...</string>
    <string name="error_database">Erro de comunicação com a base de dados</string>
    <string name="error_default_message">Erro: %s</string>
    <string name="error_unfilled_fields">Há campos obrigatórios não informados</string>
    <string name="cancel">Cancelar</string>

    <!-- Strings related to menu -->
    <string name="menu_self_investiments">Meus investimentos</string>
    <string name="menu_logout">Sair da conta</string>
    <string name="menu_self_loan_applications">Meus pedidos de empréstimo</string>
    <string name="menu_list_all_loan_applications">Ver empreendimentos</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Senha</string>
    <string name="action_sign_in">Entrar ou registrar</string>
    <string name="action_sign_in_short">Entrar</string>
    <string name="error_invalid_email">O endereço de email é inválido</string>
    <string name="error_invalid_password">A senha é muito curta</string>
    <string name="error_incorrect_password">A senha está incorreta</string>
    <string name="error_field_required">Campo obrigatório</string>
    <string name="permission_rationale">Permissão de leitura de \'contatos\' é necessário para autocompletar o email</string>

    <!-- Strings related to choosing the view profile -->
    <string name="choose_profile_question">Seja bem vindo!\nQual perfil deseja acessar?</string>
    <string name="borrower_profile">Empreendedor</string>
    <string name="lender_profile">Investidor</string>

    <!-- Strings related to loan application from a LENDER VIEW -->
    <string name="no_loan_applications_found">Nada foi encontrado.</string>
    <string name="see_on_map">Mapa</string>
    <string name="requested_value">Valor</string>
    <string name="address">Endereço</string>
    <string name="owner">Proprietário</string>
    <string name="lend">Emprestar</string>
    <string name="parcels">Parcelas</string>
    <string name="monthly_interests">Juros</string>
    <string name="loan_applications_list_prefix">Baseado em suas informações, selecionamos os seguintes empreendimentos:</string>
    <string name="how_much_want_to_loan">Quanto você quer emprestar?</string>
    <string name="self_loan_applications_list_prefix">MEUS INVESTIMENTOS</string>
    <string name="lender_payment_status_pending">Recebimento pendente</string>
    <string name="lender_payment_status_payed">Recebido em %s</string>
    <string name="lender_payment_status_late">Recebimento atrasado</string>
    <string name="loan_application_detail_value_after_taxes">Valor final</string>
    <string name="agree">Concordo</string>
    <string name="terms">Podemos efetivar cobrança ativa do seu crédito.
Seu saldo a receber é %s. Clicando em \'concordo\', a Investo se responsabilizará por localizar e cobrar o devedor para que quite sua obrigação.
Por esse serviço nós cobraremos %s do seu valor recebido</string>
    <string name="auto_charge_activated_action">Cobrança automática ativada!</string>
    <string name="auto_charge_activated_notification">Em situação de cobrança</string>

    <!-- Strings related to lend from a BORROWER VIEW -->
    <string name="how_much_want_to_borrow">Quanto você precisa?</string>
    <string name="send_to_credit_analysis">Realizar pedido</string>
    <string name="create_loan_application_title">CADASTRO DE PEDIDO DE EMPRÉSTIMO</string>
    <string name="create_loan_application_company_info_section">INFORMAÇÕES DA EMPRESA</string>
    <string name="create_loan_application_money_section">INFORMAÇÕES DO EMPRÉSTIMO</string>
    <string name="create_loan_application_parcels_section">INFORMAÇÕES DE PAGAMENTO</string>
    <string name="prompt_establishment_name">Nome do empreendimento</string>
    <string name="prompt_cnpj">CNPJ</string>
    <string name="prompt_establishment_type">Tipo do empreendimento</string>
    <string name="prompt_address">Endereço</string>
    <string name="prompt_value">Valor:</string>
    <string name="prompt_parcels_amount">Parcelamento:</string>
    <string name="prompt_monthly_interests">Taxa de juros:</string>
    <string name="prompt_total_value_after_taxes">Valor total a pagar:</string>
    <string name="prompt_parcel_number">Parcela:</string>
    <string name="prompt_due_date">Vencimento:</string>
    <string name="prompt_due_date_day">Melhor dia de vencimento:</string>
    <string name="prompt_expiration_date">Prazo de validade</string>
    <string name="borrower_loan_applications_list_prefix">MEUS PEDIDOS DE EMPRÉSTIMOS</string>
    <string name="error_requested_value_required">O valor do empréstimo não foi informado</string>
    <string name="loan_application_removed">Pedido de empréstimo removido</string>
    <string name="pay">Pagar</string>
    <string name="borrower_payment_status_pending">Pagamento pendente</string>
    <string name="borrower_payment_status_payed">Pago em %s</string>
    <string name="borrower_payment_status_late">Pagamento atrasado</string>
    <string name="payment_made">Pagamento realizado!</string>

    <!-- Strings related to parcels -->
    <string name="borrower_payment_data_history_list_prefix">PARCELAS DE %s</string>
    <string name="lender_payment_data_history_list_prefix">PARCELAS DE %s</string>
    <string name="due_date_with_value">Vencimento: %s</string>
    <string name="missing_x_days">Faltam %s dias</string>
    <string name="missing_1_day">Falta 1 dia</string>
    <string name="today">Hoje</string>
    <string name="late_payment_x_days">Atrasado há %s dias</string>
    <string name="late_payment_1_day">Atrasado há 1 dia</string>
    <string name="late_payment_fine_info">Multa: + %s (%s)</string>
    <string name="late_payment_interests_info">Juros: + %s (%s ao dia)</string>

</resources>
