<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:text="ESTABELECIMENTO"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textAlignment="center"
        android:gravity="center_vertical|start"
        android:textSize="25dp"
        android:id="@+id/txtEstablishmentName"
        android:layout_marginBottom="50dp"
        android:layout_marginTop="20dp"
        android:textStyle="bold"
        android:background="@color/itemListViewBackground"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:text="@string/requested_value"
            android:layout_width="110dp"
            android:layout_height="wrap_content"
            android:textSize="20dp"
            android:id="@+id/txtRequestedValueStatic"
            android:layout_marginBottom="20dp"
            android:textStyle="bold"
            android:layout_marginStart="20dp"
            android:textColor="@color/colorPrimaryDark"/>

        <TextView
            android:text="R$ 0,00"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20dp"
            android:id="@+id/txtRequestedValue"
            android:layout_marginBottom="20dp"
            android:textStyle="bold"
            android:layout_marginStart="20dp"
            android:textColor="@color/colorPrimaryDark"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:text="@string/owner"
            android:layout_width="110dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:textSize="20dp"
            android:id="@+id/txtOwnerStatic"
            android:layout_marginBottom="20dp"/>

        <TextView
            android:text="Nome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:textSize="20dp"
            android:id="@+id/txtOwner"
            android:layout_marginBottom="20dp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:text="@string/address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:textSize="20dp"
            android:id="@+id/txtAddress"
            android:layout_marginBottom="20dp"
            android:layout_weight="1"/>

        <Button
            android:text="@string/see_on_map"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btnSeeAddressOnMap"
            android:minHeight="0dp"
            android:minWidth="0dp"
            android:layout_marginEnd="20dp"
            android:onClick="goToMap_OnClick"/>

    </LinearLayout>

    <View
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        
        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lend"
            android:layout_marginBottom="50dp"
            />

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1" />

    </LinearLayout>

</LinearLayout>
