<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".login.SelectProfileViewActivity">

    <TextView
        android:id="@+id/nomeUser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:layout_marginTop="50dp"
        android:textSize="25dp"
        android:textAlignment="center"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/choose_profile_question"
        android:layout_marginBottom="50dp"
        android:textSize="25dp"
        android:textAlignment="center"/>

    <ImageButton
        android:id="@+id/userImg"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginBottom="50dp"
        android:background="@drawable/user" />


    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">

        <Button
            android:id="@+id/emprestador"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lender_profile"
            android:layout_marginEnd="10dp"
            android:layout_marginStart="10dp"
            android:onClick="onClickLenderProfile"/>

        <Button
            android:id="@+id/tomador"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/borrower_profile"
            android:layout_marginEnd="10dp"
            android:layout_marginStart="10dp"
            android:enabled="false"/>

    </LinearLayout>

</LinearLayout>